<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LunchApp</string>
    <string name="gps_toggle">gps</string>
    <string name="search_hint">Sök skola...</string>
    <string name="monday">Måndag: </string>
    <string name="tuesday">Tisday: </string>
    <string name="wednesday">Onsdag: </string>
    <string name="thursday">Torsdag: </string>
    <string name="friday">Fredag: </string>

</resources>
